--- a/skyrim64_test/skyrim64_test.vcxproj
+++ b/skyrim64_test/skyrim64_test.vcxproj
@@ -90,14 +90,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="src\patches\TES\NiMain\BSGeometry.h" />
     <ClInclude Include="src\patches\patches.h" />
     <ClInclude Include="src\patches\rendering\codegen.h" />
     <ClInclude Include="src\patches\rendering\common.h" />
     <ClInclude Include="src\patches\rendering\d3d11_tls.h" />
     <ClInclude Include="src\patches\TES\BSBatchRenderer.h" />
+    <ClInclude Include="src\patches\TES\BSGraphicsRenderer.h" />
     <ClInclude Include="src\patches\TES\BSShader\BSComputeShader.h" />
     <ClInclude Include="src\patches\TES\BSShader\BSPixelShader.h" />
     <ClInclude Include="src\patches\TES\BSShader\BSShaderMaterial.h" />
+    <ClInclude Include="src\patches\TES\BSShader\BSShaderUtil.h" />
     <ClInclude Include="src\patches\TES\BSShader\BSVertexShader.h" />
     <ClInclude Include="src\patches\TES\BSShader\Shaders\BSBloodSplatterShader.h" />
     <ClInclude Include="src\patches\TES\BSGraphicsRenderTargetManager.h" />
@@ -192,8 +195,10 @@
     <ClCompile Include="src\patches\rendering\d3d11_tls.cpp" />
     <ClCompile Include="src\patches\steam.cpp" />
     <ClCompile Include="src\patches\TES\BSBatchRenderer.cpp" />
+    <ClCompile Include="src\patches\TES\BSGraphicsRenderer.cpp" />
     <ClCompile Include="src\patches\TES\BSShader\BSPixelShader.cpp" />
     <ClCompile Include="src\patches\TES\BSShader\BSShaderProperty.cpp" />
+    <ClCompile Include="src\patches\TES\BSShader\BSShaderUtil.cpp" />
     <ClCompile Include="src\patches\TES\BSShader\BSVertexShader.cpp" />
     <ClCompile Include="src\patches\TES\BSShader\Shaders\BSBloodSplatterShader.cpp" />
     <ClCompile Include="src\patches\TES\BSGraphicsRenderTargetManager.cpp" />
@@ -238,6 +243,7 @@
     <None Include="src\patches\rendering\d3d11_tls_patchlist.inl" />
     <None Include="src\patches\rendering\d3d11_tls_xreflist.inl" />
     <None Include="src\patches\TES\BSShader\BSShaderConstants.inl" />
+    <None Include="src\patches\TES\BSShader\BSShaderManagerInfo.inl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets" />
