--- a/skyrim64_test/skyrim64_test.vcxproj
+++ b/skyrim64_test/skyrim64_test.vcxproj
@@ -133,6 +133,7 @@
     <ClInclude Include="src\patches\TES\BSShader\Shaders\BSLightingShader.h" />
     <ClInclude Include="src\patches\TES\BSShader\Shaders\BSLightingShaderProperty.h" />
     <ClInclude Include="src\patches\TES\BSShader\Shaders\BSSkyShader.h" />
+    <ClInclude Include="src\patches\TES\BSTList.h" />
     <ClInclude Include="src\patches\TES\MTRenderer.h" />
     <ClInclude Include="src\patches\TES\NiMain\BSGeometry.h" />
     <ClInclude Include="src\patches\patches.h" />
@@ -170,6 +171,7 @@
     <ClInclude Include="src\patches\TES\NiMain\NiSourceTexture.h" />
     <ClInclude Include="src\patches\TES\NiMain\NiTexture.h" />
     <ClInclude Include="src\patches\TES\NiMain\NiTransform.h" />
+    <ClInclude Include="src\patches\TES\Setting.h" />
     <ClInclude Include="src\profiler_internal.h" />
     <ClInclude Include="src\ansel.h" />
     <ClInclude Include="src\d3dconv.h" />
