--- a/shader_analyzer/shader_analyzer.csproj
+++ b/shader_analyzer/shader_analyzer.csproj
@@ -121,6 +121,7 @@
     <Compile Include="FormMain.Designer.cs">
       <DependentUpon>FormMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="FXPPackageExtractor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShaderAnalyzer.cs" />
