--- a/skyrim64_test/skyrim64_test.vcxproj
+++ b/skyrim64_test/skyrim64_test.vcxproj
@@ -131,6 +131,7 @@
   <ItemGroup>
     <ClInclude Include="src\patches\rendering\GpuCircularBuffer.h" />
     <ClInclude Include="src\patches\rendering\GpuTimer.h" />
+    <ClInclude Include="src\patches\TES\BGSDistantTreeBlock.h" />
     <ClInclude Include="src\patches\TES\BSGraphicsTypes.h" />
     <ClInclude Include="src\patches\TES\BSRenderPass.h" />
     <ClInclude Include="src\patches\TES\BSShader\BSShader_Dumper.h" />
@@ -256,6 +257,7 @@
     <ClCompile Include="src\patches\rendering\GpuCircularBuffer.cpp" />
     <ClCompile Include="src\patches\rendering\GpuTimer.cpp" />
     <ClCompile Include="src\patches\steam.cpp" />
+    <ClCompile Include="src\patches\TES\BGSDistantTreeBlock.cpp" />
     <ClCompile Include="src\patches\TES\BSBatchRenderer.cpp" />
     <ClCompile Include="src\patches\TES\BSGraphicsRenderer.cpp" />
     <ClCompile Include="src\patches\TES\BSShader\BSPixelShader.cpp" />
