--- a/skyrim64_test/skyrim64_test.vcxproj
+++ b/skyrim64_test/skyrim64_test.vcxproj
@@ -141,6 +141,7 @@
     <ClInclude Include="src\patches\TES\BSShader\Shaders\BSBloodSplatterShaderProperty.h" />
     <ClInclude Include="src\patches\TES\BSShader\Shaders\BSLightingShader.h" />
     <ClInclude Include="src\patches\TES\BSShader\Shaders\BSLightingShaderProperty.h" />
+    <ClInclude Include="src\patches\TES\BSShader\Shaders\BSParticleShader.h" />
     <ClInclude Include="src\patches\TES\BSShader\Shaders\BSSkyShader.h" />
     <ClInclude Include="src\patches\TES\BSShader\Shaders\BSSkyShaderProperty.h" />
     <ClInclude Include="src\patches\TES\BSTList.h" />
@@ -282,6 +283,7 @@
     <ClCompile Include="src\patches\TES\BSShader\Shaders\BSDistantTreeShader.cpp" />
     <ClCompile Include="src\patches\TES\BSShader\Shaders\BSGrassShader.cpp" />
     <ClCompile Include="src\patches\TES\BSShader\Shaders\BSLightingShader.cpp" />
+    <ClCompile Include="src\patches\TES\BSShader\Shaders\BSParticleShader.cpp" />
     <ClCompile Include="src\patches\TES\BSShader\Shaders\BSSkyShader.cpp" />
     <ClCompile Include="src\patches\TES\BSSpinLock.cpp" />
     <ClCompile Include="src\patches\TES\BSThread_Win32.cpp" />
